--- a/stories/smoke.css
+++ b/stories/smoke.css
@@ -2,12 +2,11 @@ body{
   margin: 0;
   padding: 0;
   user-select: none;
-  /* overflow: hidden; */
+  overflow: hidden;
   
 }
-/* div{
-  overflow: hidden;
-} */
+/* 
+ */
 
 /* canvas{
   background: black;
